infrastructure/configurations/production/storage/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: controller-longhorn
  annotations:
      external-dns.alpha.kubernetes.io/hostname: storage.internal.infra01.alter-it.eu
      external-dns.alpha.kubernetes.io/target: internal.infra01.alter-it.eu
      external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storage.internal.infra01.alter-it.eu`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: tailnet-only
          namespace: controller-ingress
  tls:
    secretName: storage-internal-infra01-alter-it-eu-tls
